--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "gradio>=5.44.1",
     "mcp-server-fetch>=2025.4.7",
     "mcp[cli]>=1.13.1",
     "openai-agents>=0.2.9",
+    "plotly>=6.3.0",
     "polygon-api-client>=1.15.3",
     "pyright>=1.1.404",
     "python-dotenv>=1.1.1",
